tdf#107620 RTF export: handle DocumentSettingId::PARA_SPACE_MAX compat setting

As it turns out it has a dedicated RTF control word.  With this, the
bugdoc is again kept as a one-page document during DOCX -> RTF
conversion.

If we are at it, also write the automatic before/after paragraph spacing
markup.

Change-Id: I78de644f0631e59ef507dfaa07c5a812d4ef10cd